--- a/preventa.html
+++ b/preventa.html
@@ -200,10 +200,10 @@
 
           <div class="mt-4 ba-wrap" data-start="55">
             <!-- IZQUIERDA (BASE): PARCELA REAL -->
-            <img src="/assets/ar-before.jpg" alt="Parcela real (antes)">
+            <img src="/assets/ar-after.jpg" alt="Parcela real (antes)">
             <!-- DERECHA (CLIP): PROYECTO SOBRE TERRENO -->
             <div class="ba-after-clip">
-              <img src="/assets/ar-after.jpg" alt="Proyecto terminado sobre parcela real (después)">
+              <img src="/assets/ar-before.jpg" alt="Proyecto terminado sobre parcela real (después)">
             </div>
             <div class="ba-divider" aria-hidden="true">
               <div class="ba-handle">◀ ▶</div>
