--- a/preventa.html
+++ b/preventa.html
@@ -225,6 +225,83 @@
     </div>
   </section>
 
+  <!-- ✅ REMOTO (BLOQUE DRON SUBIDO AQUÍ: justo después del HERO) -->
+  <section id="remoto" class="py-12">
+    <div class="mx-auto px-4 sm:px-6 container-narrow">
+      <div class="grid md:grid-cols-2 gap-8 items-center">
+
+        <!-- TEXTO -->
+        <div>
+          <p class="text-xs uppercase tracking-wider text-slate-500">
+            Compradores remotos · Internacional
+          </p>
+
+          <h2 class="mt-2 text-3xl font-bold">
+            Entender la vivienda sin estar allí
+          </h2>
+
+          <p class="mt-4 text-slate-600 max-w-xl">
+            Un comprador o inversor puede ver en directo el contexto de la parcela y comprender la vivienda terminada,
+            aunque se encuentre a miles de kilómetros del proyecto.
+          </p>
+
+          <p class="mt-3 text-slate-600 max-w-xl">
+            Mientras capturamos la parcela, el cliente visualiza el resultado final con foco en
+            <strong>vistas, luz y encaje con el entorno</strong>, reduciendo dudas en reuniones clave.
+          </p>
+
+          <p class="mt-4 text-sm font-medium text-slate-800">
+            No sustituye el análisis técnico ni financiero:
+            <span class="text-kairu-600">acelera comprensión y decisiones.</span>
+          </p>
+
+          <div class="mt-6 flex gap-3 flex-wrap">
+            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
+              Solicitar demo
+            </a>
+            <a href="#paquetes" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
+              Ver opciones
+            </a>
+          </div>
+        </div>
+
+        <!-- SLIDER 2 (DRON / COMPRADOR REMOTO) -->
+        <div class="card p-4">
+          <p class="text-sm font-semibold">Ejemplo · Parcela / Comprador remoto</p>
+          <p class="text-xs text-slate-500">
+            Arrastra para comparar la captura de parcela con la experiencia del comprador remoto.
+          </p>
+
+          <div class="mt-4 ba-wrap" data-start="50">
+            <!-- IZQUIERDA (BASE): DRON + PARCELA (ATARDERCER) -->
+            <img src="/assets/investor-before.jpg" alt="Dron capturando la parcela (antes)">
+            <!-- DERECHA (CLIP): COMPRADOR EN CASA (NORUEGA) VIENDO PLAYA/SOL EN PANTALLA -->
+            <div class="ba-after-clip">
+              <img src="/assets/investor-after.jpg" alt="Comprador remoto viendo la vivienda terminada (después)">
+            </div>
+
+            <div class="ba-divider" aria-hidden="true">
+              <div class="ba-handle">◀ ▶</div>
+            </div>
+
+            <input class="ba-range" type="range" min="0" max="100" value="50"
+                   aria-label="Comparar parcela y comprador remoto">
+          </div>
+
+          <div class="mt-2 flex justify-between text-xs text-slate-500">
+            <span>Parcela real</span>
+            <span>Comprador remoto</span>
+          </div>
+
+          <p class="mt-2 text-[11px] text-slate-400">
+            Ejemplo ilustrativo con fines comerciales.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <!-- PROBLEMA -->
   <section class="py-12 bg-white/70 border-y border-slate-200/60">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
@@ -309,83 +386,6 @@
             <li>Reducción de fricción comercial (menos rondas de dudas)</li>
           </ul>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- REMOTO (NUEVO BLOQUE + SLIDER 2) -->
-  <section id="remoto" class="py-12">
-    <div class="mx-auto px-4 sm:px-6 container-narrow">
-      <div class="grid md:grid-cols-2 gap-8 items-center">
-
-        <!-- TEXTO -->
-        <div>
-          <p class="text-xs uppercase tracking-wider text-slate-500">
-            Compradores remotos · Internacional
-          </p>
-
-          <h2 class="mt-2 text-3xl font-bold">
-            Entender la vivienda sin estar allí
-          </h2>
-
-          <p class="mt-4 text-slate-600 max-w-xl">
-            Un comprador o inversor puede ver en directo el contexto de la parcela y comprender la vivienda terminada,
-            aunque se encuentre a miles de kilómetros del proyecto.
-          </p>
-
-          <p class="mt-3 text-slate-600 max-w-xl">
-            Mientras capturamos la parcela, el cliente visualiza el resultado final con foco en
-            <strong>vistas, luz y encaje con el entorno</strong>, reduciendo dudas en reuniones clave.
-          </p>
-
-          <p class="mt-4 text-sm font-medium text-slate-800">
-            No sustituye el análisis técnico ni financiero:
-            <span class="text-kairu-600">acelera comprensión y decisiones.</span>
-          </p>
-
-          <div class="mt-6 flex gap-3 flex-wrap">
-            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-              Solicitar demo
-            </a>
-            <a href="#paquetes" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
-              Ver opciones
-            </a>
-          </div>
-        </div>
-
-        <!-- SLIDER 2 (DRON / COMPRADOR REMOTO) -->
-        <div class="card p-4">
-          <p class="text-sm font-semibold">Ejemplo · Parcela / Comprador remoto</p>
-          <p class="text-xs text-slate-500">
-            Arrastra para comparar la captura de parcela con la experiencia del comprador remoto.
-          </p>
-
-          <div class="mt-4 ba-wrap" data-start="50">
-            <!-- IZQUIERDA (BASE): DRON + PARCELA (ATARDERCER) -->
-            <img src="/assets/investor-before.jpg" alt="Dron capturando la parcela (antes)">
-            <!-- DERECHA (CLIP): COMPRADOR EN CASA (NORUEGA) VIENDO PLAYA/SOL EN PANTALLA -->
-            <div class="ba-after-clip">
-              <img src="/assets/investor-after.jpg" alt="Comprador remoto viendo la vivienda terminada (después)">
-            </div>
-
-            <div class="ba-divider" aria-hidden="true">
-              <div class="ba-handle">◀ ▶</div>
-            </div>
-
-            <input class="ba-range" type="range" min="0" max="100" value="50"
-                   aria-label="Comparar parcela y comprador remoto">
-          </div>
-
-          <div class="mt-2 flex justify-between text-xs text-slate-500">
-            <span>Parcela real</span>
-            <span>Comprador remoto</span>
-          </div>
-
-          <p class="mt-2 text-[11px] text-slate-400">
-            Ejemplo ilustrativo con fines comerciales.
-          </p>
-        </div>
-
       </div>
     </div>
   </section>
