--- a/preventa.html
+++ b/preventa.html
@@ -421,7 +421,7 @@
           <div>
             <h3 class="font-semibold text-lg">¿Quieres una demo con tu proyecto?</h3>
             <p class="mt-1 text-sm text-slate-600">
-              Envíanos la ubicación de la parcela y una volumetría básica, y te diremos el formato recomendable.
+              Envíanos la ubicación de la parcela y una volumetría básica, y lo revisamos brevemente en una llamada inicial.
             </p>
           </div>
           <a href="/contacto.html" class="px-6 py-3 rounded-xl bg-kairu-600 text-white font-medium">
