--- a/preventa.html
+++ b/preventa.html
@@ -438,7 +438,7 @@
     <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
       <div class="md:col-span-2">
         <h2 class="text-3xl font-bold">Mejora la comprensión del proyecto desde el primer día</h2>
-        <p class="mt-2 text-white/85">Una demo rápida para ver si encaja en tu proceso de preventa o inversión.</p>
+        <p class="mt-2 text-white/85">Una llamada inicial para valorar encaje y, si tiene sentido, plantear un piloto pagado y acotado.</p>
       </div>
       <div class="md:justify-self-end">
         <a href="/contacto.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
