--- a/preventa.html
+++ b/preventa.html
@@ -125,7 +125,7 @@
           <a href="#remoto" class="hover:text-kairu-600">Remoto</a>
           <a href="#paquetes" class="hover:text-kairu-600">Opciones</a>
           <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white font-medium">
-            Solicitar demo
+            Hablar sobre tu proyecto
           </a>
         </nav>
 
@@ -146,7 +146,7 @@
         <a href="#remoto" class="hover:text-kairu-600">Remoto</a>
         <a href="#paquetes" class="hover:text-kairu-600">Opciones</a>
         <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">
-          Solicitar demo
+          Hablar sobre tu proyecto
         </a>
       </div>
     </div>
@@ -180,7 +180,7 @@
 
           <div class="mt-6 flex gap-3 flex-wrap">
             <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-              Solicitar demo
+              Hablar sobre tu proyecto
             </a>
             <a href="#como-funciona" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
               Ver cómo funciona
