--- a/preventa.html
+++ b/preventa.html
@@ -257,7 +257,7 @@
 
           <div class="mt-6 flex gap-3 flex-wrap">
             <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-              Solicitar demo
+              Hablar sobre tu proyecto
             </a>
             <a href="#paquetes" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
               Ver opciones
@@ -425,7 +425,7 @@
             </p>
           </div>
           <a href="/contacto.html" class="px-6 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-            Solicitar demo
+            Hablar sobre tu proyecto
           </a>
         </div>
       </div>
@@ -442,7 +442,7 @@
       </div>
       <div class="md:justify-self-end">
         <a href="/contacto.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
-          Solicitar demo
+          Hablar sobre tu proyecto
         </a>
       </div>
     </div>
