--- a/preventa.html
+++ b/preventa.html
@@ -306,7 +306,7 @@
   <section class="py-12 bg-white/70 border-y border-slate-200/60">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">Por qué cuesta decidir con planos y renders</h2>
-      <p class="mt-3 text-slate-600 max-w-3xl">
+      <p class="mt-3 text-slate-600">
         Los compradores e inversores suelen tener dudas porque les falta el contexto real: el entorno, la escala y el encaje del proyecto.
         Esto genera incertidumbre, retrasos y fricción en preventa.
       </p>
