--- a/preventa.html
+++ b/preventa.html
@@ -274,10 +274,10 @@
 
           <div class="mt-4 ba-wrap" data-start="50">
             <!-- IZQUIERDA (BASE): DRON + PARCELA (ATARDERCER) -->
-            <img src="/assets/investor-before.jpg" alt="Dron capturando la parcela (antes)">
+            <img src="/assets/investor-after.jpg" alt="Dron capturando la parcela (antes)">
             <!-- DERECHA (CLIP): COMPRADOR EN CASA (NORUEGA) VIENDO PLAYA/SOL EN PANTALLA -->
             <div class="ba-after-clip">
-              <img src="/assets/investor-after.jpg" alt="Comprador remoto viendo la vivienda terminada (después)">
+              <img src="/assets/investor-before.jpg" alt="Comprador remoto viendo la vivienda terminada (después)">
             </div>
 
             <div class="ba-divider" aria-hidden="true">
@@ -365,7 +365,7 @@
   <section id="beneficios" class="py-12 bg-white/70 border-y border-slate-200/60">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">Beneficios para preventa e inversión</h2>
-      <p class="mt-3 text-slate-600 max-w-3xl">
+      <p class="mt-3 text-slate-600">
         El objetivo es simple: que el comprador entienda mejor el proyecto y gane confianza antes de comprometerse.
       </p>
 
