--- a/preventa.html
+++ b/preventa.html
@@ -394,7 +394,7 @@
   <section id="paquetes" class="py-12">
     <div class="mx-auto px-4 sm:px-6 container-narrow">
       <h2 class="text-3xl font-bold">Opciones</h2>
-      <p class="mt-3 text-slate-600 max-w-3xl">
+      <p class="mt-3 text-slate-600">
         Adaptamos el formato al momento comercial (preventa, inversores, presentación) con alcance claro y entregables útiles.
       </p>
 
