--- a/preventa.html
+++ b/preventa.html
@@ -399,22 +399,95 @@
       </p>
 
       <div class="mt-8 grid md:grid-cols-3 gap-6">
-        <div class="card p-6">
-          <h3 class="font-semibold">Pack Presentación</h3>
-          <p class="mt-2 text-sm text-slate-600">Imágenes y material listo para deck y reuniones.</p>
-          <p class="mt-4 text-xs text-slate-500">Ideal para socios / inversores.</p>
-        </div>
-        <div class="card p-6 border border-kairu-200">
-          <h3 class="font-semibold text-kairu-700">Pack Preventa</h3>
-          <p class="mt-2 text-sm text-slate-600">Material visual para explicar el proyecto a compradores.</p>
-          <p class="mt-4 text-xs text-slate-500">Ideal para equipos comerciales.</p>
-        </div>
-        <div class="card p-6">
-          <h3 class="font-semibold">Pack Evento</h3>
-          <p class="mt-2 text-sm text-slate-600">Material para presentaciones públicas y acciones de marketing.</p>
-          <p class="mt-4 text-xs text-slate-500">Ideal para lanzamientos.</p>
-        </div>
-      </div>
+
+  <!-- Pack Presentación -->
+  <div class="card p-6">
+    <div class="flex items-center justify-between gap-3">
+      <h3 class="font-semibold text-lg">Pack Presentación</h3>
+      <span class="text-[11px] px-2 py-1 rounded-full bg-slate-100 text-slate-600 border border-slate-200">
+        Decisión
+      </span>
+    </div>
+
+    <p class="mt-2 text-sm text-slate-600">
+      Material listo para deck y reuniones con socios / inversores.
+    </p>
+
+    <ul class="mt-4 text-sm text-slate-600 list-disc pl-5 space-y-2">
+      <li>Antes / después sobre la parcela real</li>
+      <li>Vistas clave para explicar volumen, encaje y entorno</li>
+      <li>Piezas listas para incluir en presentación</li>
+    </ul>
+
+    <p class="mt-4 text-xs text-slate-500">Ideal para comités, socios e inversores.</p>
+  </div>
+
+  <!-- Pack Preventa (destacado) -->
+  <div class="card p-6 border border-kairu-200">
+    <div class="flex items-center justify-between gap-3">
+      <h3 class="font-semibold text-lg text-kairu-700">Pack Preventa</h3>
+      <span class="text-[11px] px-2 py-1 rounded-full bg-kairu-50 text-kairu-700 border border-kairu-200">
+        Venta
+      </span>
+    </div>
+
+    <p class="mt-2 text-sm text-slate-600">
+      Material visual para explicar el proyecto a compradores y reducir dudas.
+    </p>
+
+    <ul class="mt-4 text-sm text-slate-600 list-disc pl-5 space-y-2">
+      <li>Antes / después sobre la parcela real</li>
+      <li>Vistas orientadas a dudas típicas (escala, entorno, encaje)</li>
+      <li>
+        <span class="font-medium text-slate-800">Opcional:</span>
+        sesión guiada en parcela (live) para resolver dudas en una reunión clave
+      </li>
+    </ul>
+
+    <div class="mt-4 rounded-xl bg-slate-50 border border-slate-200 p-4">
+      <p class="text-xs text-slate-600">
+        <span class="font-semibold">Importante:</span>
+        la sesión live es <span class="font-semibold">puntual</span> (no monitorización continua).
+        Se usa para decisiones comerciales y preventa.
+      </p>
+    </div>
+
+    <p class="mt-4 text-xs text-slate-500">Ideal para equipos comerciales y reservas tempranas.</p>
+  </div>
+
+  <!-- Pack Evento -->
+  <div class="card p-6">
+    <div class="flex items-center justify-between gap-3">
+      <h3 class="font-semibold text-lg">Pack Evento</h3>
+      <span class="text-[11px] px-2 py-1 rounded-full bg-slate-100 text-slate-600 border border-slate-200">
+        Impacto
+      </span>
+    </div>
+
+    <p class="mt-2 text-sm text-slate-600">
+      Material para presentaciones públicas y acciones de marketing.
+    </p>
+
+    <ul class="mt-4 text-sm text-slate-600 list-disc pl-5 space-y-2">
+      <li>Piezas visuales para pantallas y presentaciones</li>
+      <li>Imágenes (y/o clip corto) de alto impacto</li>
+      <li>Formatos listos para web y lanzamiento</li>
+    </ul>
+
+    <p class="mt-4 text-xs text-slate-500">Ideal para lanzamientos y showroom.</p>
+  </div>
+
+</div>
+
+<!-- Nota de compra / filtro (añadir justo debajo de las cards) -->
+<div class="mt-8 card p-6">
+  <p class="text-sm text-slate-700">
+    <span class="font-semibold text-kairu-700">Siguiente paso:</span>
+    llamada inicial de 20–30 min para valorar encaje y, si tiene sentido, propuesta de
+    <strong>piloto pagado y acotado</strong> (alcance + calendario + entregables).
+  </p>
+</div>
+
 
       <div class="mt-10 card p-6">
         <div class="flex flex-col md:flex-row items-start md:items-center justify-between gap-4">
