--- a/preventa.html
+++ b/preventa.html
@@ -477,33 +477,6 @@
     <p class="mt-4 text-xs text-slate-500">Ideal para lanzamientos y showroom.</p>
   </div>
 
-</div>
-
-<!-- Nota de compra / filtro (añadir justo debajo de las cards) -->
-<div class="mt-8 card p-6">
-  <p class="text-sm text-slate-700">
-    <span class="font-semibold text-kairu-700">Siguiente paso:</span>
-    llamada inicial de 20–30 min para valorar encaje y, si tiene sentido, propuesta de
-    <strong>piloto pagado y acotado</strong> (alcance + calendario + entregables).
-  </p>
-</div>
-
-
-      <div class="mt-10 card p-6">
-        <div class="flex flex-col md:flex-row items-start md:items-center justify-between gap-4">
-          <div>
-            <h3 class="font-semibold text-lg">¿Quieres una demo con tu proyecto?</h3>
-            <p class="mt-1 text-sm text-slate-600">
-              Envíanos la ubicación de la parcela y una volumetría básica, y lo revisamos brevemente en una llamada inicial.
-            </p>
-          </div>
-          <a href="/contacto.html" class="px-6 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-            Hablar sobre tu proyecto
-          </a>
-        </div>
-      </div>
-
-    </div>
   </section>
 
   <!-- CTA FINAL -->
@@ -511,7 +484,7 @@
     <div class="mx-auto px-4 sm:px-6 container-narrow grid md:grid-cols-3 gap-8 items-center">
       <div class="md:col-span-2">
         <h2 class="text-3xl font-bold">Mejora la comprensión del proyecto desde el primer día</h2>
-        <p class="mt-2 text-white/85">Una llamada inicial para valorar encaje y, si tiene sentido, plantear un piloto pagado y acotado.</p>
+        <p class="mt-2 text-white/85">Una llamada inicial para valorar encaje y, si tiene sentido, plantear un <strong>piloto pagado y acotado</strong></p>(alcance, calendario y entregables claros).
       </div>
       <div class="md:justify-self-end">
         <a href="/contacto.html" class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
