--- a/preventa.html
+++ b/preventa.html
@@ -120,7 +120,7 @@
 
         <!-- MENU DESKTOP -->
         <nav class="hidden md:flex items-center gap-6 text-sm">
-            <a href="#remoto" class="hover:text-kairu-600">Remoto</a>
+            <a href="#compradores" class="hover:text-kairu-600">Compradores remotos</a>
           <a href="#como-funciona" class="hover:text-kairu-600">Cómo funciona</a>
           <a href="#beneficios" class="hover:text-kairu-600">Beneficios</a>
           <a href="#paquetes" class="hover:text-kairu-600">Opciones</a>
