--- a/preventa.html
+++ b/preventa.html
@@ -487,10 +487,13 @@
         <p class="mt-2 text-white/85">Una llamada inicial para valorar encaje y, si tiene sentido, plantear un <strong>piloto pagado y acotado</strong></p>(alcance, calendario y entregables claros).
       </div>
       <div class="md:justify-self-end">
-       <a href="mailto:alex@kairu.tech
+      <a href="mailto:alex@kairu.tech
 ?subject=Consulta%20sobre%20visualización%20de%20proyecto
 &body=Hola%20Kairu%20Tech,%0D%0A%0D%0A
 Estoy%20interesado%20en%20valorar%20un%20piloto%20pagado%20para%20visualizar%20un%20proyecto%20sobre%20parcela%20real.%0D%0A%0D%0A
+Nombre%20y%20cargo:%20%0D%0A
+Empresa:%20%0D%0A
+Teléfono%20de%20contacto%20(opcional):%20%0D%0A%0D%0A
 Ubicación%20de%20la%20parcela:%20%0D%0A
 Tipo%20de%20proyecto:%20%0D%0A
 Momento%20del%20proyecto%20(preventa/inversión):%20%0D%0A%0D%0A
@@ -498,6 +501,7 @@ Gracias"
 class="inline-block px-6 py-3 rounded-xl bg-white text-kairu-700 font-semibold">
   Hablar sobre tu proyecto
 </a>
+
 
       </div>
     </div>
