--- a/preventa.html
+++ b/preventa.html
@@ -190,9 +190,21 @@ class="px-4 py-2 rounded-xl bg-kairu-600 text-white font-medium">
           </p>
 
           <div class="mt-6 flex gap-3 flex-wrap">
-            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-              Hablar sobre tu proyecto
-            </a>
+             <a href="mailto:alex@kairu.tech
+?subject=Consulta%20sobre%20visualización%20de%20proyecto
+&body=Hola%20Kairu%20Tech,%0D%0A%0D%0A
+Estoy%20interesado%20en%20valorar%20un%20piloto%20pagado%20para%20visualizar%20un%20proyecto%20sobre%20parcela%20real.%0D%0A%0D%0A
+Nombre%20y%20cargo:%20%0D%0A
+Empresa:%20%0D%0A
+Teléfono%20de%20contacto%20(opcional):%20%0D%0A%0D%0A
+Ubicación%20de%20la%20parcela:%20%0D%0A
+Tipo%20de%20proyecto:%20%0D%0A
+Momento%20del%20proyecto%20(preventa/inversión):%20%0D%0A%0D%0A
+Gracias"
+class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
+  Hablar sobre tu proyecto
+</a>
+
             <a href="#como-funciona" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
               Ver cómo funciona
             </a>
@@ -267,9 +279,21 @@ class="px-4 py-2 rounded-xl bg-kairu-600 text-white font-medium">
           </p>
 
           <div class="mt-6 flex gap-3 flex-wrap">
-            <a href="/contacto.html" class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
-              Hablar sobre tu proyecto
-            </a>
+      <a href="mailto:alex@kairu.tech
+?subject=Consulta%20sobre%20visualización%20de%20proyecto
+&body=Hola%20Kairu%20Tech,%0D%0A%0D%0A
+Estoy%20interesado%20en%20valorar%20un%20piloto%20pagado%20para%20visualizar%20un%20proyecto%20sobre%20parcela%20real.%0D%0A%0D%0A
+Nombre%20y%20cargo:%20%0D%0A
+Empresa:%20%0D%0A
+Teléfono%20de%20contacto%20(opcional):%20%0D%0A%0D%0A
+Ubicación%20de%20la%20parcela:%20%0D%0A
+Tipo%20de%20proyecto:%20%0D%0A
+Momento%20del%20proyecto%20(preventa/inversión):%20%0D%0A%0D%0A
+Gracias"
+class="px-5 py-3 rounded-xl bg-kairu-600 text-white font-medium">
+  Hablar sobre tu proyecto
+</a>
+
             <a href="#paquetes" class="px-5 py-3 rounded-xl border border-slate-300 font-medium">
               Ver opciones
             </a>
