--- a/engineering.html
+++ b/engineering.html
@@ -123,7 +123,19 @@
           <a href="#directo" class="hover:text-kairu-600">En directo</a>
           <a href="#uso" class="hover:text-kairu-600">Cuándo usarlo</a>
           <a href="#piloto" class="hover:text-kairu-600">Piloto</a>
-          <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white font-medium">
+        
+            <a href="mailto:alex@kairu.tech
+?subject=Consulta%20sobre%20visualización%20de%20proyecto
+&body=Hola%20Kairu%20Tech,%0D%0A%0D%0A
+Estoy%20interesado%20en%20valorar%20un%20piloto%20pagado%20para%20visualizar%20un%20proyecto%20sobre%20parcela%20real.%0D%0A%0D%0A
+Nombre%20y%20cargo:%20%0D%0A
+Empresa:%20%0D%0A
+Teléfono%20de%20contacto%20(opcional):%20%0D%0A%0D%0A
+Ubicación%20de%20la%20parcela:%20%0D%0A
+Tipo%20de%20proyecto:%20%0D%0A
+Momento%20del%20proyecto%20(preventa/inversión):%20%0D%0A%0D%0A
+Gracias"
+class="px-4 py-2 rounded-xl bg-kairu-600 text-white font-medium">
             Explorar piloto
           </a>
         </nav>
@@ -144,7 +156,19 @@
         <a href="#directo" class="hover:text-kairu-600">En directo</a>
         <a href="#uso" class="hover:text-kairu-600">Cuándo usarlo</a>
         <a href="#piloto" class="hover:text-kairu-600">Piloto</a>
-        <a href="/contacto.html" class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">
+   
+                <a href="mailto:alex@kairu.tech
+?subject=Consulta%20sobre%20visualización%20de%20proyecto
+&body=Hola%20Kairu%20Tech,%0D%0A%0D%0A
+Estoy%20interesado%20en%20valorar%20un%20piloto%20pagado%20para%20visualizar%20un%20proyecto%20sobre%20parcela%20real.%0D%0A%0D%0A
+Nombre%20y%20cargo:%20%0D%0A
+Empresa:%20%0D%0A
+Teléfono%20de%20contacto%20(opcional):%20%0D%0A%0D%0A
+Ubicación%20de%20la%20parcela:%20%0D%0A
+Tipo%20de%20proyecto:%20%0D%0A
+Momento%20del%20proyecto%20(preventa/inversión):%20%0D%0A%0D%0A
+Gracias"
+class="px-4 py-2 rounded-xl bg-kairu-600 text-white w-max">
           Explorar piloto
         </a>
       </div>
